style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
  }
  :root {
    --back-color: #0e0e0e;
    --text-color: #f7f7f7;
    --primary-color: #ff90e8;
    --accent: #292929;
    
    --border: 2px var(--accent) solid;
    --corner-radius: .75rem;
    --gap: 1rem;
    --gap-big: 1.5rem;
    font-size: 16px;
}
::-moz-selection {
    color: var(--back-color);
    background: var(--text-color);
}

::selection {
    color: var(--back-color);
    background: var(--text-color);
}
body {
    height: 100%;
    width: 100%;
    background-color: var(--back-color);
    color: var(--text-color);
    overflow-x: hidden;
    font-family: "Poppins", sans-serif;
}
section {
    min-height: 100vh;
    padding: var(--gap-big);
}
li {
    list-style: none;
    text-decoration: none;
}
a {
  color: inherit;
    text-decoration: none;
}
hr {
  margin-block: 1rem;
  border: none;
  border-top: var(--border);
  color: var(--accent);
}

/* ------------------------------------------------------------------------------------------------- */
@media screen and (min-width:512px) and (max-width:768px) {
  :root {
    font-size: 12px;
  }
  #hero svg{
    display: none;
  }
}
@media screen and (min-width:768px) and (max-width:1024px) {
  :root {
    font-size: 16px;
  }
}
@media screen and (max-width:512px) {
  :root {
    font-size: 11px;
  }
  #hero svg{
    display: none;
  }
  #contact {
    word-break: break-all;
  }
}
@media screen and (max-width:768px) {
  .location, .helloText {
    display: none;
  }
}
@media screen and (max-width:1024px) {
  .location {
    display: none;
  }
  #hero .title {
    flex-wrap: wrap;
  }
  #hero .info {
    flex-wrap: wrap;
  }
}

/* ------------------------------------------------------------------------------------------------- */

.button {
  background: transparent;
  backdrop-filter: blur(20px);
  color: var(--primary-color);
  padding: .5rem;
  border: var(--border);
  border-radius: var(--corner-radius);
  padding-inline: var(--gap);
  }
.navbar {
  display: flex;
  justify-content: space-between;
  padding-inline: var(--gap);
  font-size: 1.375rem;
  height: 50px;
  margin: 1.25rem;
}
.navbar .mainNav {
  display: flex;
  gap: var(--gap);
  position: fixed;
  left: 50%;
  transform: translate(-50%);
  padding: .75rem;
  background: transparent;
  backdrop-filter: blur(20px);
  z-index: 100;
}
.navbar .mainNav a {
  display: flex;
  text-align: center;
  color: #d6d6d6;
  transition: .2s;
  position: relative;
  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
  transition-duration: 400ms;
  transition-property: color;
}
.navbar .mainNav a:hover {
  transform: scale(1.02);
}
.navbar .mainNav a:focus,
.navbar .mainNav a:hover {
  color: #fff;
}
.navbar .mainNav a:focus:after,
.navbar .mainNav a:hover:after {
  width: 100%;
  left: 0%;
}
.navbar .mainNav a:after {
  content: "";
  pointer-events: none;
  bottom: -2px;
  left: 50%;
  position: absolute;
  width: 0%;
  height: 2px;
  background-color: #fff;
  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
  transition-duration: 400ms;
  transition-property: width, left;
}
.location {
  color: inherit;
}
#hero {
  font-family: "Source Code Pro", monospace;
  }
#hero .title {
    display: flex;
    justify-content: space-between;
    margin-top: 20rem;
    padding: var(--gap);
    align-items: center;
}
#hero .title .name {
    font-size: 10rem;
    font-weight: 700;
    font-family: "montserrat", sans-serif;
}
#hero .title .desc {
    font-size: 1.5rem;
    padding-right: 4rem;
    padding-top: 4rem;
}
#hero .info {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  font-size: 2rem;
}
#hero .info .text {
  margin: 2rem;
  max-width: 950px;
}
#hero .info .text a, .emoji {
  border-radius: var(--corner-radius);
  background-color: #ffd074;
  color: #0e0e0e;
  padding-inline: .5rem;
}
#hero .info .color1 {
  color: #17f1d1;
}
#hero .info .color2 {
  color: #ffd074;
}
#hero .info .color3 {
  color: #a374ff;
}
#cursor,
#box,
#text {
  cursor: pointer;
}
#cursor {
  overflow: visible;
  transform: translate3d(300px, 0, 0) scale(1);
  transform-origin: center center;
  transform-box: fill-box;
  animation: cursor 5s ease infinite alternate;
}
@keyframes cursor {
  0% {
    opacity: 0;
    transform: translate3d(300px, 0, 0) scale(1);
  }
  30% {
    opacity: 1;
    transform: translate3d(0, 0, 0) scale(1);
  }
  60% {
    opacity: 1;
    transform: translate3d(-200px, -200px, 0) scale(1);
  }
  65% {
    opacity: 1;
    transform: translate3d(-200px, -200px, 0) scale(0.95);
  }
  70% {
    opacity: 1;
    transform: translate3d(-200px, -200px, 0) scale(1);
  }
  100% {
    opacity: 1;
    transform: translate3d(-300px, -50px, 0) scale(1);
  }
}

#box {
  opacity: 0;
  animation: box 5s ease infinite alternate;
}
@keyframes box {
  0%,
  60% {
    opacity: 0;
  }
  65%,
  100% {
    opacity: 1;
  }
}

.marquee {
    font-family: "Source Code Pro", monospace;
    overflow: hidden;
    display: flex;
    background-color: var(--text-color);
    border-bottom: var(--border);
    border-top: var(--border);
    color: var(--back-color);
}
.marquee h1 {
    margin-block: 1rem;
    font-size: 6rem;
    white-space: nowrap;
    text-transform: uppercase;
}
body::before {
    --line: color-mix(in lch, canvasText 85%, var(--text-color));
    --size: 65px;
    content: "";
    position: fixed;
    top: -.125vh;
    height: 100vh;
    width: 100vw;
    position: absolute;
    background:
        linear-gradient(90deg, var(--line) 1px, transparent 1px var(--size)) 0 -5vmin /
            var(--size) var(--size),
        linear-gradient(var(--line) 1px, transparent 1px var(--size)) 0 -5vmin /
            var(--size) var(--size);
    mask: linear-gradient(-15deg, transparent 60%, white);
    z-index: -1;
}

.loader {
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
    height: 40px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  
.words {
    overflow: hidden;
    position: relative;
  }
.words::after {
    content: "";
    position: absolute;
    inset: 0;
    background: linear-gradient(
      var(--bg-color) 10%,
      transparent 30%,
      transparent 70%,
      var(--bg-color) 90%
    );
    z-index: 20;
  }
  
.word {
    display: block;
    height: 100%;
    padding-left: 6px;
    color: var(--primary-color);
    animation: spin_4991 7s infinite;
  }
  @keyframes spin_4991 {
    0% {
        transform: translateY(0);
    }
    12.5% {
        transform: translateY(-100%);
    }
    25% {
        transform: translateY(-200%);
    }
    37.5% {
        transform: translateY(-300%);
    }
    50% {
        transform: translateY(-400%);
    }
    62.5% {
        transform: translateY(-500%);
    }
    75% {
        transform: translateY(-600%);
    }
    87.5% {
        transform: translateY(-700%);
    }
    100% {
        transform: translateY(-800%);
    }
}
#about {
  display: flex;
  justify-content: center;
  flex-direction: column;
}
#about .aboutDesc {
  color: #cccccc;
}
#about .aboutHeading ,#about .aboutDesc{
  padding-inline: var(--gap);
}
#about .aboutHeading {
  display: flex;
  font-size: 2rem;
  font-weight: 600;
  padding-block: .25rem;
  color: var(--primary-color);
}
#about .info-cards {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
  padding-top: 2rem;
  justify-content: center;
}

#about .info-cards .card {
  background-color: #191917;
  border-radius: var(--corner-radius);
  border: var(--border);
  height: 400px;
  padding: var(--gap);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
  transition: transform 0.2s;
  flex: 1 1 300px;
  display: flex;
  flex-direction: column;
}

#about .info-cards .card:hover {
  transform: scale(1.01);
  box-shadow: 0 4px 8px rgba(255, 144, 233, 0.3);
  border: 2px solid var(--primary-color);
}
#about .info-cards .icon{
  font-size: 5rem;
  margin-top: auto; 
}
#about .info-cards h2 {
  font-size: 1.5rem;
  font-weight: 600;
}

/* ------------------------------------------------------------------------------------------------------- */

.technology-cards {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
  padding-top: 2rem;
  justify-content: center;
}

.technology-cards .card {
  background-color: #1a1a1a;
  border-radius: 8px;
  padding: 15px 20px;
  border: var(--border);
  display: flex;
  align-items: center;
  gap: 15px;
  flex: 1 1 450px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
  transition: transform 0.2s;
}

.technology-cards .card:hover {
  transform: scale(1.01);
  box-shadow: 0 4px 8px rgba(255, 144, 233, 0.2);
  border: 2px solid var(--primary-color);
}

.technology-cards .icon .ph {
  font-size: 1.5rem;
}
.technology-cards .icon {
  color: var(--primary-color);
}

.technology-cards h2 {
  font-size: 1.1rem;
  color: #ffffff;
  font-weight: 400;
}

.technology-cards .card p {
  font-size: 0.9rem;
  color: #cccccc;
  margin: 0;
}
#contact {
  background-color: #191917;
  border-radius: var(--corner-radius);
  position: relative;
  padding: var(--gap-big);
  margin: 2rem;
  margin-inline: 10rem;
  min-height: 40vh;
  display: flex;
  flex-direction: column;
}
#contact #datetime {
  margin-bottom: 0.5rem;
  font-size: 1.25rem;
}
#contact .cssbuttons-io-button {
  background: var(--primary-color);
  color: white;
  font-family: inherit;
  padding: 0.35em;
  padding-left: 1.2em;
  font-size: 17px;
  font-weight: 500;
  border-radius: 0.9em;
  border: none;
  letter-spacing: 0.05em;
  display: flex;
  align-items: center;
  box-shadow: inset 0 0 1.6em -0.6em var(--primary-color);
  overflow: hidden;
  position: relative;
  height: 2.8em;
  width: fit-content;
  padding-right: 3.3em;
}
#contact #resume_btn {
  display: flex;
  width: fit-content;
  height: fit-content;
}

#contact .cssbuttons-io-button .icon {
  background: white;
  margin-left: 1em;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 2.2em;
  width: 2.2em;
  border-radius: 0.7em;
  box-shadow: 0.1em 0.1em 0.6em 0.2em var(--primary-color);
  right: 0.3em;
  transition: all 0.3s;
}
#contact .cssbuttons-io-button:hover .icon {
  width: calc(100% - 0.6em);
}
#contact .cssbuttons-io-button .icon svg {
  width: 1.1em;
  transition: transform 0.3s;
  color: var(--primary-color);
}
#contact .cssbuttons-io-button:hover .icon svg {
  transform: translateX(0.1em);
}
#contact .cssbuttons-io-button:active .icon {
  transform: scale(0.95);
}
#contact p{
  font-size: 2rem;
  color: #5f5f5f;
}
#contact h1{
  color: #5f5f5f;
  padding-bottom: 1rem;
  font-weight: 400;
}
#contact p span a{
  font-size: 2rem;
  color: var(--text-color);
  transition: .2s;
  position: relative;
  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
  transition-duration: 400ms;
  transition-property: color;
}
#contact p span a:focus,
#contact p span a:hover {
  color: var(--primary-color);
}
#contact p span a:focus:after,
#contact p span a:hover:after {
  width: 100%;
  left: 0%;
}
#contact p span a:after {
  content: "";
  pointer-events: none;
  bottom: -2px;
  left: 50%;
  position: absolute;
  width: 0%;
  height: 2px;
  background-color: var(--primary-color);
  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
  transition-duration: 400ms;
  transition-property: width, left;
}
#contact .footer {
  position: absolute;
  color: var(--primary-color);
  right: 1rem;
  bottom: 1rem;
}

